<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
  
  <PreferenceCategory
  		android:title="@string/preference_general_title">
  	
  		<ListPreference
  			android:key="page_refresh_time_preference"
  			android:title="@string/preference_page_refresh_time_title" 
  			android:summary="@string/preference_page_refresh_time_summary"
  			android:defaultValue="10000"
  			android:entries="@array/preference_page_refresh_entries"
  			android:entryValues="@array/preference_page_refresh_entryvalues"
  			android:dialogTitle="@string/preference_page_refresh_time_title" 
  			/>
  		<ListPreference
  			android:key="alert_counts_preference"
  			android:title="@string/preference_alert_counts_title" 
  			android:summary="@string/preference_alert_counts_summary"
  			android:defaultValue="30"
  			android:entries="@array/preference_alert_counts_entries"
  			android:entryValues="@array/preference_alert_counts_entryvalues"
  			android:dialogTitle="@string/preference_alert_counts_title" 
  			/>  
<!--
    	<ListPreference
  			android:key="notification_refresh_time_preference"
  			android:title="@string/preference_notification_refresh_time_title" 
  			android:summary="@string/preference_notification_refresh_time_summary"
  			android:defaultValue="600000"
  			android:entries="@array/preference_notification_refresh_entries"
  			android:entryValues="@array/preference_notification_refresh_entryvalues"
  			android:dialogTitle="@string/preference_notification_refresh_time_title" 
  			/>
  			-->
  </PreferenceCategory>
  
  <PreferenceCategory
  		android:title="@string/preference_notification_title">
  <!-- turn off the notification -->
          <CheckBoxPreference
                android:key="notification_on_preference"
                android:title="@string/preference_notification_new_title" 
                android:summaryOn="@string/preference_notification_new_summary_on"
                android:summaryOff="@string/preference_notification_new_summary_off"
                android:defaultValue="false"/>
  
  </PreferenceCategory>
  <!-- 
    <PreferenceCategory
  		android:title="@string/preference_urgent_alert_tab_title">
  
  
  
  </PreferenceCategory>
   -->
  
</PreferenceScreen>
