<?xml version="1.0" encoding="utf-8"?>

<!-- put ScrollView outside to support scroll -->

<ScrollView 
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content">
  
<LinearLayout
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content">
	  
	<Button 
		android:text="@string/alert_detail_back" 
		style="@style/alert_detail_button"
		android:id="@+id/backBtn" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"></Button>
		
	<LinearLayout 
	  android:layout_width="wrap_content" 
	  android:layout_height="wrap_content">
	
		<TextView 
			android:text="@string/alert_detail_name" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			style="@style/alert_detail_title"
			/>
		<TextView 
			android:id="@+id/nameLbl" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"/>
	</LinearLayout>
	
	<LinearLayout 
	  android:layout_width="wrap_content" 
	  android:layout_height="wrap_content">
	
		<TextView 
			android:text="@string/alert_detail_time" 
  			style="@style/alert_detail_title"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"/>
		<TextView 
			android:id="@+id/timeLbl" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"/>
	</LinearLayout>
	
	<LinearLayout 
	  android:layout_width="wrap_content" 
	  android:layout_height="wrap_content">
	
		<TextView 
			android:text="@string/alert_detail_resource" 
  			style="@style/alert_detail_title"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"/>
		<TextView 
			android:id="@+id/resourceLbl" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"/>
	</LinearLayout>
	

		<TextView 
			android:text="@string/alert_detail_reason" 
			style="@style/alert_detail_title"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"/>
		<TextView 
			android:id="@+id/reasonLbl" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"/>

	
	<!-- for listing AlertActionLog -->	
	<TextView 
		android:text="@string/alert_detail_esc_action_logs"
		style="@style/alert_detail_title"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"/>
	<LinearLayout 
		android:id="@+id/logsLayout" 
		android:orientation="vertical"
	  	android:layout_width="fill_parent" 
	  	android:layout_height="wrap_content"/>


	<!-- ack -->

	<Button 
		android:text="@string/alert_detail_acked" 
		style="@style/alert_detail_button"
		android:id="@+id/ackedBtn" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:visibility="invisible"></Button>
	  	
	
	<!-- fix -->
	<LinearLayout 
		android:id="@+id/fixLayout" 
		android:orientation="vertical"
	  	android:layout_width="fill_parent" 
	  	android:layout_height="wrap_content"
	  	android:visibility="invisible">
	  	<TextView 
			android:text="@string/alert_detail_fix_resolution" 
			style="@style/alert_detail_title"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"/>
		  	
	  	<EditText 
	  		android:id="@+id/fixResolutionTxt" 
	  		android:layout_width="fill_parent" 
	  		android:layout_height="wrap_content"></EditText>

		<Button 
			android:text="@string/alert_detail_fixed" 
			style="@style/alert_detail_button"
			android:id="@+id/fixedBtn" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"></Button>
	  	
	  	
	</LinearLayout>
	


</LinearLayout>

</ScrollView>